--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch db.json --port 8000"
+    "server": "json-server --watch db.json --port 8000",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
