--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "json-server --watch db.json --port 8000",
-    "start": "node server.js"
+    "server": "json-server --watch db.json --port 8000"
   },
   "author": "",
   "license": "ISC",
