Update script to cd backend

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "craco": "cd frontend && craco start",
-    "start": "node ./backend/server.js",
+    "start": "cd backend && node server.js",
     "server": "json-server --watch ./backend/db.json --port 8000"
   },
   "repository": {
