--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "craco": "cd frontend && craco start",
+    "build": "cd frontend && craco build",
     "start": "cd backend && node server.js",
     "server": "json-server --watch ./backend/db.json --port 8000"
   },
@@ -20,6 +21,16 @@
   "homepage": "https://github.com/yirano/test-project_ms#readme",
   "dependencies": {
     "@craco/craco": "^6.0.0",
-    "json-server": "^0.16.3"
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
+    "axios": "^0.21.0",
+    "json-server": "^0.16.3",
+    "node-sass": "^5.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "^4.0.1"
   }
 }
