--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,10 @@
     ]
   },
   "devDependencies": {
-    "node-php-awesome-server": "^1.3.1"
+    "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
+    "node-php-awesome-server": "^1.3.1",
+    "svg-url-loader": "^7.1.1",
+    "webpack-cli": "^4.3.0"
   }
 }
