--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack --watch --mode development",
+    "dev": "webpack serve --watch --mode development --env development",
     "scss": "node-sass --watch src/styles/scss/index.scss -o src/styles/css/",
     "start": "craco start",
-    "startdev": "node devserver.js",
+    "startdev": "nodemon devserver.js",
     "test": "craco test"
   },
   "author": "Tiffany Arellano",
@@ -42,7 +42,10 @@
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "node-php-awesome-server": "^1.3.1",
+    "style-loader": "^2.0.0",
     "svg-url-loader": "^7.1.1",
-    "webpack-cli": "^4.3.0"
+    "url-loader": "^4.1.1",
+    "webpack-cli": "^4.3.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
