Fresh setup of Craft CMS

--- a/frontend/.env
+++ b/frontend/.env
@@ -2,10 +2,10 @@
 ENVIRONMENT=dev
 
 # The application ID used to to uniquely store session and cache data, mutex locks, and more
-APP_ID=CraftCMS--94a4f748-baa7-476d-ab2a-3f0775e2cdb0
+APP_ID=CraftCMS--9261e42d-7909-45d5-bc36-915e0ac2133c
 
 # The secure key Craft will use for hashing and encrypting data
-SECURITY_KEY=zJtrDCA_Bkrss-F0r4OxL0XIOKPVOPmV
+SECURITY_KEY=BZJHKoxYn_3KN4KhDnOq5PzMtknwIFcD
 
 # The database driver that will be used (mysql or pgsql)
 DB_DRIVER=mysql
@@ -17,7 +17,7 @@ DB_SERVER=192.168.64.3
 DB_PORT=3306
 
 # The name of the database to select
-DB_DATABASE=pretend-company
+DB_DATABASE=test-project
 
 # The database username to connect with
 DB_USER=nitro
@@ -31,10 +31,4 @@ DB_SCHEMA=
 # The prefix that should be added to generated table names (only necessary if multiple things are sharing the same database)
 DB_TABLE_PREFIX=
 
-PRIMARY_SITE_URL=https://pretend-company.test
-
-WDS_SOCKET_HOST=localhost
-WDS_SOCKET_PORT=3000
-PUBLIC_PATH="http://localhost:3000"
-MANIFEST_PATH=/asset-manifest.json
-FAST_REFRESH=true
+PRIMARY_SITE_URL=test-project.test
